// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot: Typography 1`] = `
.c0 {
  font-size: 1.2em;
  font-weight: 600;
  margin: 0 0 15px;
  color: #000;
}

<p
  className="c0"
>
  通常の文章です
</p>
`;

exports[`should match snapshot: Typography error text 1`] = `
.c0 {
  font-size: 1.2em;
  font-weight: 600;
  margin: 0 0 15px;
  color: #d32f2f;
}

<p
  className="c0"
>
  エラーの文章です
</p>
`;
